// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new project 1`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.language.project_key
  </h4>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-large spacer-right text-middle"
      maxLength={400}
      minLength={1}
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    <SubmitButton
      className="text-middle"
      disabled={true}
    >
      Done
    </SubmitButton>
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.project_key_requirement
    </div>
  </form>
</div>
`;

exports[`creates new project 2`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.language.project_key
  </h4>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-large spacer-right text-middle"
      maxLength={400}
      minLength={1}
      onChange={[Function]}
      required={true}
      type="text"
      value="foo"
    />
    <i
      className="spinner text-middle"
    />
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.project_key_requirement
    </div>
  </form>
</div>
`;

exports[`creates new project 3`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.language.project_key
  </h4>
  <div>
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <DeleteButton
      className="button-small text-middle"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`deletes project 1`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.language.project_key
  </h4>
  <div>
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <DeleteButton
      className="button-small text-middle"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`deletes project 2`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.language.project_key
  </h4>
  <div>
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <i
      className="spinner text-middle"
    />
  </div>
</div>
`;

exports[`deletes project 3`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.language.project_key
  </h4>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-large spacer-right text-middle"
      maxLength={400}
      minLength={1}
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    <SubmitButton
      className="text-middle"
      disabled={true}
    >
      Done
    </SubmitButton>
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.project_key_requirement
    </div>
  </form>
</div>
`;
